last question comment

--- a/pyltr.ipynb
+++ b/pyltr.ipynb
@@ -444,7 +444,18 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18050.14"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#standard deviation of loan amount in 90-day loans to two decimal places\n",
     "df_2= df.groupby('TermDays').std()\n",
@@ -477,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1995,6 +2008,7 @@
     }
    ],
    "source": [
+    "# late loans avg no of day in second week\n",
     "round(Late.groupby('appilcationDate').mean().iloc[1,4], 2)"
    ]
   },
